Cash4Life Added

--- a/LotteryNumbers/LotteryNumbers.csproj
+++ b/LotteryNumbers/LotteryNumbers.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CashForLife.cs" />
     <Compile Include="ColumnSpecs.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Drawings.cs" />
     <Compile Include="FileHandler.cs" />
     <Compile Include="EnumFilterOptions.cs" />
@@ -80,6 +82,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
